k8s/infra/security/kyverno/policy-drop-all-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-drop-all-capabilities
spec:
  validationFailureAction: Audit
  rules:
    - name: check-drop-all-capabilities
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - falco
            - kyverno
            - observability
      validate:
        message: "Containers must drop ALL capabilities"
        pattern:
          spec:
            containers:
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
