k8s/infra/security/kyverno/policy-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
spec:
  validationFailureAction: Audit
  rules:
    - name: check-readonly-rootfs
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - falco
            - kyverno
            - observability
      validate:
        message: "Containers must use readOnlyRootFilesystem: true"
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
